force-app/main/default/objects/Sales__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dollars</fullName>
            </value>
            <value>
                <fullName>Euro&apos;s</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>