force-app/main/default/objects/Sales__c/fields/Related_FA_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Related_FA_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related FA LineItem</label>
    <referenceTo>Financial_Account_LineItem__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>