force-app/main/default/objects/Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Detailed_Category__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Payee_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Related_FA_LineItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>